# codex-jsonl-observatory

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/api/: mod.rs
backend/src/domain/: chat_log.rs  filter.rs  mod.rs  rendered_entry.rs  transcript_block.rs
backend/src/export/: mod.rs  worklog.rs
backend/src/parser/: jsonl.rs  mod.rs
docs/: agent-boundaries.md  no-crossing-zones.md  observatory-map.md  parser-port-plan.md  source-app-parity-checklist.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.svelte  app.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/lib/: load-workflow.ts  parse-contract.ts  tauri-bridge.ts  worklog-contract.ts
frontend/src/lib/rendering/: ChatTranscript.svelte  MarkdownTranscript.svelte  RenderedEntry.svelte  TerminalTranscript.svelte  TranscriptBlock.svelte  render-labels.ts  transcript-themes.ts
