[package]
name = "codex-jsonl-observatory-tauri"
version = "0.1.0"
edition = "2024"

[lib]
name = "codex_jsonl_observatory_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codex-jsonl-observatory"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
backend = { path = "../../backend" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
